Get ObsoleteWorkspaceFinder to pass nearly all unit tests #88